--- a/app/templates/cornbasischart.html
+++ b/app/templates/cornbasischart.html
@@ -73,7 +73,16 @@
                         // }
                         return texts.join('/');
                     }
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
                 // data: []
             },
             yAxis: {},
@@ -200,7 +209,16 @@
                         // }
                         return texts.join('/');
                     }
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
                 // data: []
             },
             yAxis: {},
@@ -297,7 +315,16 @@
                         // }
                         return texts.join('/');
                     }
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
                 // data: []
             },
             yAxis: {},
@@ -379,7 +406,16 @@
                         // }
                         return texts.join('/');
                     }
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
                 // data: []
             },
             yAxis: {},
