--- a/app/templates/cornspreadchart.html
+++ b/app/templates/cornspreadchart.html
@@ -76,7 +76,16 @@
                         // }
                         return texts.join('/');
                     }
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
                 // data: []
             },
             yAxis: {},
@@ -200,7 +209,16 @@
                         // }
                         return texts.join('/');
                     }
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
                 // data: []
             },
             yAxis: {},
@@ -297,7 +315,16 @@
                         // }
                         return texts.join('/');
                     }
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
                 // data: []
             },
             yAxis: {},
@@ -394,7 +421,16 @@
                         // }
                         return texts.join('/');
                     }
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
                 // data: []
             },
             yAxis: {},
@@ -491,7 +527,16 @@
                         // }
                         return texts.join('/');
                     }
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
                 // data: []
             },
             yAxis: {max:50},
@@ -589,7 +634,16 @@
                         // }
                         return texts.join('/');
                     }
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
                 // data: []
             },
             yAxis: {},
@@ -673,7 +727,16 @@
                         // }
                         return texts.join('/');
                     }
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
                 // data: []
             },
             yAxis: {},
