--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<p>If you are interested in the web, call the phone 15542377707, the same number with WeChat!</p>
 <h1>项目捐赠</h1>
 <p>此项目为开源项目，可永久免费使用，没有强制捐赠要求！</p>
 <div align="center">
@@ -14,6 +15,30 @@
 		</tr>
 	</table>
 </div>
-<p>If you are interested in the web, call the phone 15542377707, the same number with WeChat!</p>
+<p>作为回馈，我仍想把利弗莫尔的几条建议赠送于你。</p>
+<ol>
+	<li style='color:red'>优秀的投机家们总是在等待，总是有耐心，等待着市场证实他们的判断。要记住，在市场本身的表现证实你的看法之前，不要完全相信你的判断。</li>
+	<li style='color:red'>要想在投机中赚到钱，就得买卖一开始就表现出利润的商品或者股票。那些买进或卖出后就出现浮亏的东西说明你正在犯错，一般情况下，如果三天之内依然没有改善，立马抛掉它。</li>
+	<li style='color:red'>绝不要平摊亏损，一定要牢牢记住这个原则。</li>
+	<li>在价格进入到一个明显的趋势之后，它将一直沿着贯穿其整个趋势的特定路线而自动运行。</li>
+	<li>当我看见一个危险信号的时候，我不跟它争执，我躲开！几天以后，如果一切看起来还不错，我就再回来。这样，我会省去很多麻烦，也会省很多钱。</li>
+	<li>记住这一点：在你什么都不做的时候，那些觉得自己每天都必须买进卖出的投机者们正在为你的下一次投机打基础，你会从他们的错误中找到赢利的机会。</li>
+	<li style='color:red'>认识到趋势在什么地方出现，顺着潮流驾驭你的投机之舟，就能从中得到好处。不要跟市场争论，最重要的是，不要跟市场争个高低。</li>
+	<li>不管是在什么时候，我都有耐心等待市场到达我称为“关键点”的那个位置，只有到了这个时候，我才开始进场交易，在我的操作中，只要我是这样的，总能赚到钱。因为我是在一个趋势刚开始的心理时刻开始交易的，我不用担心亏钱，原因很简单，我恰好是在我个人的原则告诉我立刻采取行动的时候果断进场开始跟进的，因此，我要做的就是，坐着不动，静观市场按照它的行情发展。我知道，如果我这样做了，市场本身的表现会在恰当的时机给我发出让我获利平仓的信号。</li>
+	<li>我的经验是，如果我不是在接近某个趋势的开始点才进场交易，我就绝不会从这个趋势中获取多少利润。</li>
+	<li>“罗马不是一天建成的”，真正重大的趋势不会在一天或一个星期就结束，它走完自身的逻辑过程需要时间。重要的是，市场运动的一个很大部分是发生在整个运动过程的最后48小时之内，这段时间是进入市场或退出市场最重要的时机。</li>
+	<li>利用关键点位预测市场运动的时候，要记住，如果价格在超过或是跌破某个关键点位后，价格的运动不像它应该表现的那样，这就是一个必须密切关注的危险信号。</li>
+	<li>我相信很多操作者都有过相似的经历，从市场本身来看，似乎一切都充满了希望，然而就是此时此刻，微妙的内心世界已经闪起危险的信号，只有通过对市场长期研究和在市场上长期的摸爬滚打，才能慢慢培养出这种特殊的敏感。</li>
+	<li style='color:red'>在进入交易之前，最重要的是最小阻力线是否和你的方向一致。</li>
+	<li style='color:red'>当一个投机者能确定价格的关键点，并能解释它在那个点位上的表现时，他从一开始就胜券在握了。</li>
+	<li style='color:red'>在心理上预测行情就行了，但一定不要轻举妄动，要等待，直到你从市场上得到证实你的判断是正确的信号，到了那个时候，而且只有到了那个时候，你才能用你的钱去进行交易。</li>
+	<li>在长线交易中，除了知识以外，耐心比任何其它因素更为重要。实际上，耐心和知识是相辅相成的，那些想通过投机获得成功的人应该学会一个简单的道理：在你买入或是卖出之前，你必须仔细研究，确认是否是你进场的最好时机。只有这样，你才能保证你的头寸是正确的头寸。</li>
+	<li style='color:red'>当股价从10 美元涨到50 美元，你不要急于卖出，而应该思考一下有没有进一步的理由促使它从50 美元涨到150 美元。</li>
+	<li>市场只有一个方向,不是多头,也不是空头,而是做对的方向。</li>
+	<li>时刻留意可能出现的危险信号。</li>
+	<li style='color:red'>投机，天下最彻头彻尾充满魔力的游戏。但是这个游戏懒得动脑子的人不能玩，心理不健全的人不能玩，企图一夜暴富的冒险家不能玩，这些人一旦贸然卷入，终究要一贫如洗。</li>
+	<li>华尔街永不改变,钱袋会变,投机者会变,股票会变,但华尔街永不改变,因为人性永不改变。</li>
+	<li>一个人不能在同一件事上花几年功夫，还形不成正确的做事态度，正是这一点将专业人士与业余人士区分开来。</li>
+</ol>
 
 {% endblock %}
