--- a/app/templates/corntempres.html
+++ b/app/templates/corntempres.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>玉米临储拍卖</title>
+    <title>临储拍卖</title>
     <!-- 引入 echarts.js -->
     <!-- <script src="js/echarts.js"></script> -->
     <script type="text/javascript" src="http://echarts.baidu.com/dist/echarts.js"></script>
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- <p>{{l1}}</p> -->
-    <font size="6" color="blue"><p align="center">拍卖成交</p></font>
+    <font size="6" color="blue"><p align="center">玉米拍卖成交</p></font>
     <div>
         <table  id="corntempres" border="1" cellpadding="10" align="center">
             {% for row in tempRes_df.values %}
@@ -52,7 +52,7 @@
 
     </script>
 
-    <font size="6" color="blue"><p align="center">拍卖量价走势图</p></font>
+    <font size="6" color="blue"><p align="center">玉米拍卖量价走势图</p></font>
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
     <div id="tempres" class="chart600"></div>
 
@@ -103,7 +103,7 @@
             ],
             legend: {
                 data:['2014成交率', '2015成交率', '2014成交价', '2015成交价'],
-                y:'49%',
+                y:'97%',
             },
             xAxis: [{
                 type:'category',
@@ -116,6 +116,15 @@
                         return texts.join('/');
                     },
                 },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
                 // data: []
             },{
                 type:'category',
@@ -127,7 +136,16 @@
                         var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
                         return texts.join('/');
                     },
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
             },{
                 type:'category',
                 gridIndex: 2,
@@ -138,7 +156,16 @@
                         var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
                         return texts.join('/');
                     },
-                }
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },
             },{
                 type:'category',
                 gridIndex: 3,
@@ -149,13 +176,30 @@
                         var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
                         return texts.join('/');
                     },
-                }                    
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
+                    }
+                },                    
             }            
             ],
             yAxis: [
                 {
                     gridIndex: 0, 
                     type:'value', 
+                    max:function(value){
+                        return value.max*1.2
+                    },
+                    axisLabel:{
+                        formatter:function(value){
+                            return (value*100).toFixed(0)+"%"
+                        }
+                    }
                 },{
                     gridIndex: 0, 
                     type:'value',
@@ -165,6 +209,14 @@
                 },{
                     gridIndex: 1, 
                     type:'value',
+                    max:function(value){
+                        return value.max*1.2
+                    },
+                    axisLabel:{
+                        formatter:function(value){
+                            return (value*100).toFixed(0)+"%"
+                        }
+                    }
                 },{
                     gridIndex: 1, 
                     type:'value',
@@ -174,6 +226,14 @@
                 },{
                     gridIndex: 2,
                     type:'value',
+                    max:function(value){
+                        return value.max*1.2
+                    },
+                    axisLabel:{
+                        formatter:function(value){
+                            return (value*100).toFixed(0)+"%"
+                        }
+                    }
                 },{
                     gridIndex: 2,
                     type:'value',
@@ -183,6 +243,15 @@
                 },{
                     gridIndex: 3,
                     type:'value',
+                    max:function(value){
+                        return value.max*1.2
+                    },
+                    axisLabel:{
+                        formatter:function(value){
+                            return (value*100).toFixed(0)+"%"
+                        }
+                    }
+
                 },{
                     gridIndex: 3,
                     type:'value',
@@ -337,13 +406,25 @@
         // 使用刚指定的配置项和数据显示图表。
         myChart1.setOption(option);
     </script>
-<!--     <script type="text/javascript">
-        var myChart1 = echarts.init(document.getElementById('kgl_lr'), 'vintage');
-        var myl1 = {{l1|tojson}};
-        console.log(myl1);
+
+    <font size="6" color="blue"><p align="center">大豆拍卖量价走势图</p></font>
+    <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
+    <div id="soytempres" class="chart600"></div>
+    <script type="text/javascript">
+        // 基于准备好的dom，初始化echarts实例
+        var myChart2 = echarts.init(document.getElementById('soytempres'), 'vintage');
+        var myl2 = {{l2|tojson}};
+        // myChart.showLoading();
+
+        // 指定图表的配置项和数据
         var option = {
             title: {
-                text: 'deepprocessing'
+                text: '18年度大豆拍卖量价走势图',
+                left:'center',
+                // textStyle:{
+                //     color:'black',
+                //     fontSize:28,
+                // }
             },
             tooltip: {
                 trigger: 'axis',
@@ -351,89 +432,125 @@
                     type:'cross'
                 }
             },
-            // emphasis: {
-            //     itemStyle: {
-            //         color: 'blue'
-            //     },
-            //     label: {
-            //         show: true,
-            //         formatter: 'This is a emphasis label.'
-            //     
-            // },
             legend: {
-                data:['开工率', '黑龙江利润', '吉林利润']
+                data:['成交量', '成交均价', '成交率'],
+                y:'5%',
             },
             xAxis: {
                 type:'category',
                 axisLabel:{
                     // formatter:'{{value}}kg'
                     formatter: function (value, index) {
-                        // 格式化成月/日，只在第一个刻度显示年份
                         var date = new Date(value);
                         var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
-                        // var texts = [date.getMonth()+1, date.getDate()];
-                        // if (index === 0) {
-                        //     texts.unshift(date.getFullYear());
-                        // }
                         return texts.join('/');
+                    },
+                },
+                axisPointer: {
+                    label: {
+                        formatter: function (params) {
+                            var date = new Date(params.value);
+                            var texts = [date.getFullYear(), date.getMonth()+1, date.getDate()];
+                            return texts.join('/');
+                        },
                     }
-                }
+                },
                 // data: []
             },
             yAxis: [
                 {
-                    // name:'NorthCarryouy',
+                    name:'单位：万吨',
+                    type:'value', 
+                    // max:function(value){
+                    //     return value.max*1.2
+                    // },
+                    axisLabel:{
+                        formatter:function(value){
+                            return value.toFixed(0)
+                        },
+                    },
+                },{
+                    name:'单位：元/吨，',
                     type:'value',
                     min:function(value){
                         return value.min-20
                     },
-                    position:'left'
-                },
-                {
-                    // name:'NorthCarryouyChange',
-                    type:'value',
-                    position:'right',
-                    offset:50
-                },
-                {
-                    // name:'JinzhouPrice',
-                    type:'value',
-                    min:function(value){
-                        return value.min-50
+                    max:function(value){
+                        return value.max+20
                     },
-                    position:'right'
+                    axisLabel:{
+                        formatter:function(value){
+                            return value.toFixed(0)
+                        },
+                    },
+                },{
+                    name:' %',
+                    type:'value',
+                    max:function(value){
+                        return value.max*1.2
+                    },
+                    axisLabel:{
+                        formatter:function(value){
+                            return (value*100).toFixed(0)+"%"
+                        },
+                    },
+                    position:'right',
+                    offset:50,
                 }
             ],
-            dataZoom: [
-                {
-                    type: 'slider',
-                    start:0,
-                    end:100
-                }
-            ],
+            // dataZoom: [
+            //     {
+            //         type: 'slider',
+            //         start:0,
+            //         end:100
+            //     }
+            // ],
             dataset:{
-                dimensions: ['date', '68cs_db_kgl', 'cs_hlj_lr', 'cs_jl_lr'],
-                source: myl1
+                dimensions: ['date', '2018volume', '2018price', '2018ratio'],
+                source: myl2
             },
             series: [
                 {
-                    name: '开工率',
+                    name: '成交量',
+                    xAxisIndex: 0,
                     yAxisIndex:0,
-                    type: 'line',
-                    itemStyle: {normal: {areaStyle: {type: 'default'}}},
+                    type: 'bar',
+                    barWidth:'30%',
+                    color:'RoyalBlue',
+                    // symbol:'none',
+                    // symbolSize:0,
+                    // itemStyle: {normal: {areaStyle: {type: 'default'}}},
                     // data: {{l4}}
                 },
                 {
-                    name: '黑龙江利润',
+                    name: '成交均价',
+                    xAxisIndex: 0,
                     yAxisIndex:1,
-                    type: 'bar',
-                    color:'green'
+                    type: 'line',
+                    color:"red",
+                    symbol:'diamond',
+                    symbolSize:8,
+                    smooth:true,
+                    // color:"yellowgreen",
+                    // itemStyle:{
+                    //     normal:{
+                    //         color:function(params){
+                    //             console.log(params);
+                    //             if (params.data.NorthCarryoutChange>0) {return 'red'} else {return 'green'}
+                    //         }
+                    //     }
+                    // }
                     // data: {{l4s}}
                 },
                 {
-                    name: '吉林利润',
+                    name: '成交率',
+                    xAxisIndex: 0,
                     yAxisIndex:2,
-                    type: 'bar'
+                    type: 'line',
+                    symbol:'none',
+                    smooth:true,
+                    color:'yellow',
+                    // itemStyle: {normal: {lineStyle: {width: 3}}},
                     // data: {{l4s}}
                 }
             ]
@@ -441,13 +558,13 @@
 
 
         // 使用刚指定的配置项和数据显示图表。
-        myChart1.setOption(option);
-    </script> -->
+        myChart2.setOption(option);
+    </script>
 
     <script type="text/javascript">
         window.onresize = function(){
             myChart1.resize()
-            // myChart2.resize()
+            myChart2.resize()
             // myChart3.resize()
             // myChart4.resize()
         }
