--- a/app/templates/corntempres.html
+++ b/app/templates/corntempres.html
@@ -49,7 +49,6 @@
         tb.rows[11].cells[6].style.fontSize = "30px";
         tb.rows[11].cells[7].style.color = 'green';
         tb.rows[11].cells[7].style.fontSize = '30px';
-
     </script>
 
     <font size="6" color="blue"><p align="center">玉米拍卖量价走势图</p></font>
@@ -409,7 +408,7 @@
 
     <font size="6" color="blue"><p align="center">大豆拍卖量价走势图</p></font>
     <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-    <div id="soytempres" class="chart600"></div>
+    <div id="soytempres" class="chart600noyin"></div>
     <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
         var myChart2 = echarts.init(document.getElementById('soytempres'), 'vintage');
