--- a/app/templates/cornbasischart.html
+++ b/app/templates/cornbasischart.html
@@ -103,31 +103,36 @@
                     type: 'line',
                     color:'black',
                     symbol:'triangle',
-                    symbolSize:8
+                    symbolSize:8,
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '2018',
                     type: 'line',
                     symbol:'rect',
-                    symbolSize:6
+                    symbolSize:6,
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '2017',
                     type: 'line',
                     symbol:'diamond',
-                    symbolSize:8
+                    symbolSize:8,
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '2016',
                     type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '2015',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 }
             ]
@@ -239,27 +244,32 @@
                     type: 'line',
                     color:'black',
                     symbol:'triangle',
-                    symbolSize:8
+                    symbolSize:8,
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '2018',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '2017',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '2016',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '2015',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 }
             ]
@@ -345,27 +355,32 @@
                     type: 'line',
                     color:'black',
                     symbol:'triangle',
-                    symbolSize:8
+                    symbolSize:8,
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '2018',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '2017',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '2016',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '2015',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 }
             ]
@@ -433,7 +448,7 @@
             series: [
                 {
                     name: '基差1月',
-                    type: 'line'
+                    type: 'line',
                     // data: {{l4}}
                 },
                 {
