--- a/app/templates/cornspreadchart.html
+++ b/app/templates/cornspreadchart.html
@@ -104,6 +104,7 @@
                 {
                     name: 'c_cs1601',
                     type: 'line',
+                    connectNulls:true,
                     // symbol:'rect',
                     // symbolSize:6
                     // data: {{l4}}
@@ -111,6 +112,7 @@
                 {
                     name: 'c_cs1701',
                     type: 'line',
+                    connectNulls:true,
                     // symbol:'triangle',
                     // symbolSize:10
                     // data: {{l4}}
@@ -118,6 +120,7 @@
                 {
                     name: 'c_cs1801',
                     type: 'line',
+                    connectNulls:true,
                     // symbol:'diamond',
                     // symbolSize:10
                     // data: {{l4s}}
@@ -127,7 +130,8 @@
                     type: 'line',
                     color:'black',
                     symbol:'triangle',
-                    symbolSize:10
+                    symbolSize:10,
+                    connectNulls:true,
                     // data: {{l4s}}
                 }
             ]
@@ -236,22 +240,26 @@
             series: [
                 {
                     name: 'c_cs1505',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: 'c_cs1605',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: 'c_cs1705',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: 'c_cs1805',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
@@ -259,7 +267,8 @@
                     type: 'line',
                     color:'black',
                     symbol:'triangle',
-                    symbolSize:10
+                    symbolSize:10,
+                    connectNulls:true,
                     // data: {{l4s}}
                 }
             ]
@@ -342,22 +351,26 @@
             series: [
                 {
                     name: 'c_cs1509',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: 'c_cs1609',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: 'c_cs1709',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: 'c_cs1809',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
@@ -365,7 +378,8 @@
                     type: 'line',
                     color:'black',
                     symbol:'triangle',
-                    symbolSize:10
+                    symbolSize:10,
+                    connectNulls:true,
                     // data: {{l4s}}
                 }
             ]
@@ -451,27 +465,32 @@
                     type: 'line',
                     color:'black',
                     symbol:'triangle',
-                    symbolSize:10
+                    symbolSize:10,
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '1709_1801',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '1609_1701',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '1509_1601',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '1409_1501',
                     type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 }
             ]
@@ -557,27 +576,32 @@
                     type: 'line',
                     color:'black',
                     symbol:'triangle',
-                    symbolSize:10
+                    symbolSize:10,
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '1801_1805',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '1701_1705',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '1601_1605',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '1501_1505',
                     type: 'line',
+                    connectNulls:true,
                     
                     // data: {{l4s}}
                 }
@@ -664,27 +688,32 @@
                     type: 'line',
                     color:'black',
                     symbol:'triangle',
-                    symbolSize:10
+                    symbolSize:10,
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '1805_1809',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4}}
                 },
                 {
                     name: '1705_1709',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '1605_1609',
-                    type: 'line'
+                    type: 'line',
+                    connectNulls:true,
                     // data: {{l4s}}
                 },
                 {
                     name: '1505_1509',
                     type: 'line',
+                    connectNulls:true,
                     
                     // data: {{l4s}}
                 }
