--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,6 +6,7 @@
     <font color="red"><p><b>玉米市场资讯</b></p></font>
     <p>
         <a href="/priceSummarize" target="_blank">产区价格与工厂库存</a>&nbsp;&nbsp;
+        <a href="/shouliangjindu" target="_blank">售粮进度</a>&nbsp;&nbsp;
         <a href="/portcarryout" target="_blank">南北港库存与价格</a>&nbsp;&nbsp;
         <a href="/deepprocessing" target="_blank">深加工开工率与利润</a>&nbsp;&nbsp;
         <a href="/corntempres" target="_blank">临储拍卖</a>&nbsp;&nbsp;
