--- a/app/templates/priceSummarize.html
+++ b/app/templates/priceSummarize.html
@@ -36,7 +36,7 @@
     </script>
 
     <font size="6" color="blue"><p align="center">深加工企业库存（天）</p></font>
-    <div>
+<!--     <div>
         <table id="deepco" border="1" cellpadding="10" align="center">
             {% for row in deepcarryout_df.values %}
             <tr>
@@ -65,10 +65,10 @@
         tb2.rows[14].cells[0].style.display='none';
         tb2.rows[15].cells[0].style.display='none';
         tb2.rows[11].cells[0].rowSpan = 5;
-    </script>
+    </script> -->
 
     <font size="6" color="blue"><p align="center">饲料厂库存（天）</p></font>
-    <div>
+<!--     <div>
         <table id="feedco" border="1" cellpadding="10" align="center">
             {% for row in feedcarryout_df.values %}
             <tr>
@@ -93,7 +93,7 @@
         tb2.rows[11].cells[0].style.display='none';
         tb2.rows[12].cells[0].style.display='none';
         tb2.rows[9].cells[0].rowSpan = 4;
-    </script>
+    </script> -->
 
 </body>
 </html>
